--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Ruby and Jekyll
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.0' # Or your desired Ruby version
+          bundler-cache: true
+        run: bundle exec rake
 
       - name: Install dependencies
         run: |
