--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bolondforint.hu" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  leinadsened
+google_analytics: G-B7QKFY5LWM
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
